// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generate snapshots 1`] = `
"<div>
  Parent
  <child-stub></child-stub></div>"
`;

exports[`generate snapshots 2`] = `
"<div>
  Parent
  <div>This text should not be appeared</div></div>"
`;
